force-app/main/default/objects/Debt_Structure__c/Debt_Structure__c.object-meta.xml
<CustomObject>
    <description>Custom object to track debt structures for restructuring engagements.</description>
    <label>Debt Structure</label>
    <nameField>
        <displayFormat>EDS-{000000}</displayFormat>
        <label>Debt Structure #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debt Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>