force-app/main/default/objects/Debt_Structure__c/fields/Amoritization__c.field-meta.xml
<CustomField>
    <fullName>Amoritization__c</fullName>
    <label>Amortization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>