force-app/main/default/objects/Debt_Structure__c/fields/Call_Provisions_Prepayment_Premiums__c.field-meta.xml
<CustomField>
    <fullName>Call_Provisions_Prepayment_Premiums__c</fullName>
    <label>Call Provisions / Prepayment Premiums</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>