force-app/main/default/objects/Debt_Structure__c/fields/Constituent_Debt__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constituent Debt</label>
    <type>Checkbox</type>
</CustomField>