force-app/main/default/objects/Debt_Structure__c/fields/Covenants__c.field-meta.xml
<CustomField>
    <fullName>Covenants__c</fullName>
    <label>Covenants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>