force-app/main/default/objects/Debt_Structure__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Debt Structures</relationshipLabel>
    <relationshipName>Debt_Structures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>