force-app/main/default/objects/Debt_Structure__c/fields/Facility_Balance_MM__c.field-meta.xml
<CustomField>
    <fullName>Facility_Balance_MM__c</fullName>
    <label>Facility Balance (MM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>