force-app/main/default/objects/Debt_Structure__c/fields/Fees_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Fees_Expenses__c</fullName>
    <label>Fees &amp; Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>