force-app/main/default/objects/Debt_Structure__c/fields/Mandatory_Prepayments_ECF_Sweep__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Prepayments_ECF_Sweep__c</fullName>
    <label>Mandatory Prepayments / ECF Sweep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>