force-app/main/default/objects/Debt_Structure__c/fields/OID_Percent__c.field-meta.xml
<CustomField>
    <fullName>OID_Percent__c</fullName>
    <label>OID Percent</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>