force-app/main/default/objects/Debt_Structure__c/fields/Pre_Post_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_Transaction__c</fullName>
    <label>Pre / Post Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Transaction</fullName>
            </value>
            <value>
                <fullName>Post-Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>