force-app/main/default/objects/Debt_Structure__c/fields/Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Type__c</fullName>
    <label>Security Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Debt (First Lien) - Revolver</fullName>
            </value>
            <value>
                <fullName>Bank Debt (First Lien) - Term Loan A</fullName>
            </value>
            <value>
                <fullName>Bank Debt (First Lien) - Term Loan B</fullName>
            </value>
            <value>
                <fullName>Bank Debt (First Lien) - Synthetic LC Facility</fullName>
            </value>
            <value>
                <fullName>ABL/ABS Facility - First Lien</fullName>
            </value>
            <value>
                <fullName>LC Facility</fullName>
            </value>
            <value>
                <fullName>Bank Debt (Second Lien)</fullName>
            </value>
            <value>
                <fullName>ABL/ABS Facility - Second Lien</fullName>
            </value>
            <value>
                <fullName>Convertible Notes (Secured)</fullName>
            </value>
            <value>
                <fullName>Senior Secured Notes</fullName>
            </value>
            <value>
                <fullName>Capital Leases</fullName>
            </value>
            <value>
                <fullName>Other Secured Debt</fullName>
            </value>
            <value>
                <fullName>Mezzanine Debt</fullName>
            </value>
            <value>
                <fullName>Senior Notes (Unsecured)</fullName>
            </value>
            <value>
                <fullName>Senior Subordinated Notes (Unsecured)</fullName>
            </value>
            <value>
                <fullName>Substantially All Assets</fullName>
            </value>
            <value>
                <fullName>Convertible Notes (Unsecured)</fullName>
            </value>
            <value>
                <fullName>Other Unsecured Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>