force-app/main/default/objects/Debt_Structure__c/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , TEXT(Security_Type__c), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Details</label>
    <type>Text</type>
</CustomField>