force-app/main/default/objects/Debt_Structure__c/listViews/Filter.listView-meta.xml
<ListView>
    <fullName>Filter</fullName>
    <columns>NAME</columns>
    <columns>Security_Type__c</columns>
    <columns>Amoritization__c</columns>
    <columns>Covenants__c</columns>
    <columns>OID_Percent__c</columns>
    <columns>Maturity_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2019 12:00 AM</value>
    </filters>
    <label>Filter</label>
</ListView>